# rabbitmq-lite

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
agents/: account_agent.py  base_agent.py  billing_agent.py  document_agent.py  support_agent.py
gateway/: api.py
messaging/: publisher.py  rabbitmq.py
shared/: __init__.py
src/agents/: billing_agent.py  document_agent.py  support_agent.py
src/gateway/: __init__.py  api.py
src/messaging/: rabbitmq.py
src/rabbitmq_lite/: __init__.py  aggregator.py
src/rabbitmq_lite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rabbitmq_lite/gateway/: api.py
src/rabbitmq_lite/messaging/: __init__.py  publisher.py
src/router/: __init__.py  mcp_router.py
src/shared/: 0  __init__.py  schemas.py
