[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitmq_lite"
version = "0.1.4"
description = "RabbitMQ based microservice messaging framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pika"]

authors = [
  { name = "Vignesh Annadurai", email = "vignesharavindh2002@gmail.com" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rabbitmq_lite*"]